--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.pythonPath": "/anaconda3/envs/py36/bin/python",
+    // "terminal.integrated.inheritEnv": false,
     "terminal.integrated.env.osx": {
         "PATH":"/anaconda3/condabin:/Users/xyin/.nvm/versions/node/v6.9.1/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/mysql/bin"
     },
