--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
-    "python.pythonPath": "/anaconda3/envs/py36/bin/python",
+    "python.pythonPath": "/Users/xyin/anaconda3/bin/python",
     // "terminal.integrated.inheritEnv": false,
     "terminal.integrated.env.osx": {
-        "PATH":"/anaconda3/condabin:/Users/xyin/.nvm/versions/node/v6.9.1/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/mysql/bin"
+        "PATH":"/Users/xyin/anaconda3/bin:/Users/xyin/anaconda3/condabin:/Users/xyin/.nvm/versions/node/v9.10.1/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/mysql/bin:/Applications/terraform:/Applications/Visual Studio Code.app/Contents/Resources/app/bin"
     },
     "licenser.author": "Yin, Xiangshi",
     "python.linting.enabled": true
